# nbv_object_reconstruction

devel/nbv_planner/: compose.yaml
devel/octomap_operations/: Dockerfile
ros2_nbv_ws/install/: local_setup.sh  setup.sh
ros2_nbv_ws/install/nbv_planner/lib/nbv_planner/: nbv_planner_node  test_candidate_views
ros2_nbv_ws/install/nbv_planner/share/nbv_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_nbv_ws/install/nbv_planner/share/nbv_planner/candidate_views/: candidate_views_200.txt
ros2_nbv_ws/install/nbv_planner/share/nbv_planner/launch/: nbv_planner_launch.py
ros2_nbv_ws/install/nbv_planner/share/nbv_planner/rviz/: reconstruction_rviz.rviz
ros2_nbv_ws/install/octomap_operations/share/ament_index/resource_index/package_run_dependencies/: octomap_operations
ros2_nbv_ws/install/octomap_operations/share/ament_index/resource_index/parent_prefix_path/: octomap_operations
ros2_nbv_ws/install/octomap_operations/share/octomap_operations/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_nbv_ws/install/octomap_operations_interfaces/include/octomap_operations_interfaces/octomap_operations_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
ros2_nbv_ws/install/octomap_operations_interfaces/include/octomap_operations_interfaces/octomap_operations_interfaces/srv/: focus_point.h  focus_point.hpp  octomap_data.h  octomap_data.hpp
ros2_nbv_ws/install/octomap_operations_interfaces/include/octomap_operations_interfaces/octomap_operations_interfaces/srv/detail/: focus_point__builder.hpp  focus_point__description.c  focus_point__functions.c  focus_point__functions.h  focus_point__rosidl_typesupport_introspection_cpp.hpp  focus_point__struct.h  focus_point__traits.hpp  (+26 more)
ros2_nbv_ws/install/octomap_operations_interfaces/share/octomap_operations_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_nbv_ws/install/octomap_operations_interfaces/share/octomap_operations_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_octomap_operations_interfaces__rosidl_generator_cExport.cmake  export_octomap_operations_interfaces__rosidl_generator_cppExport.cmake  export_octomap_operations_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_octomap_operations_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_octomap_operations_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  octomap_operations_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  octomap_operations_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  octomap_operations_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
ros2_nbv_ws/install/octomap_operations_interfaces/share/octomap_operations_interfaces/srv/: FocusPoint.idl  OctomapData.idl  StopOctomapUpdate.idl
ros2_nbv_ws/log/: latest_build
ros2_nbv_ws/src/nbv_planner/: package.xml  setup.cfg  setup.py
ros2_nbv_ws/src/nbv_planner/launch/: test_candidate_launch.py
ros2_nbv_ws/src/nbv_planner/nbv_planner/: nbv_planner_node.py  robot_controller_node_control_loop.py  test_candidate_views.py  test_candidate_views_control_loop.py  test_candidate_views_control_loop_v2.py
ros2_nbv_ws/src/octomap_operations/: CMakeLists.txt
ros2_nbv_ws/src/octomap_operations/config/: octomap_ops_params.yaml
ros2_nbv_ws/src/octomap_operations/launch/: octomap_operations_launch.py
ros2_nbv_ws/src/octomap_operations/src/: focus_point_calculation.cpp  ig_calculation_methods.cpp  octomap_operations.hpp  octomap_operations_main.cpp  octomap_operations_node.cpp  operations_utils.cpp
ros2_nbv_ws/src/octomap_operations_interfaces/: CMakeLists.txt
ros2_nbv_ws/src/robot_actions/: CMakeLists.txt  package.xml
ros2_nbv_ws/src/robot_actions/action/: MoveToGoal.action
