<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nbv_planner</name>
  <version>0.0.0</version>
  <description>Next Best View planner using octomap services</description>
  <maintainer email="fatih.dursun@manchester.ac.uk">Fatih Dursun</maintainer>
  <license>LGPL</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap_operations_interfaces</depend>
  <depend>robot_actions</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
